--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- To Avoid Duplicate Links -->
-  <link rel=“canonical” href=“http://bracu-cse474.github.io/” />
+  <link rel=“canonical” href=“http://cse474-bracu.github.io/” />
   <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -13,7 +13,7 @@
   <meta name="twitter:description" content="Simulation methods, model building, random number generator, statistical analysis of results, validation and verification techniques.">
   <meta name="twitter:image" content="../bracu_logo.png">
   <!-- Meta Tag FB -->
-  <meta property="og:url" content="http://bracu-cse474.github.io/" />
+  <meta property="og:url" content="cse474-bracu.github.io/" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="CSE474 - Simulation and Modeling | School of Data and Sciences, BRAC University" />
   <meta property="og:description" content="Simulation methods, model building, random number generator, statistical analysis of results, validation and verification techniques." />
