--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <p>
     Offerings of CSE474:
     <ul>
-      <li><a href="spring2021">Spring 2021</a></li>
-      <li><a href="summer2021">Summer 2021</a></li>
-      <li><a href="fall2021">Fall 2021</a></li>
-      <li><a href="spring2022">Spring 2022</a></li>
-      <li><a href="summer2022">Summer 2022</a></li>
+      <li><a href="spring2021">Spring 2021</a> (Under Construction)</li>
+      <li><a href="summer2021">Summer 2021</a> (Under Construction)</li>
+      <li><a href="fall2021">Fall 2021</a> (Under Construction)</li>
+      <li><a href="spring2022">Spring 2022</a> (Under Construction)</li>
+      <li><a href="summer2022">Summer 2022</a> (Under Construction)</li>
       <li><a href="fall2022">Fall 2022</a></li>
     </ul>
   </p>
