--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="summer2021">Summer 2021</a> (Under Construction)</li>
       <li><a href="fall2021">Fall 2021</a> (Under Construction)</li>
       <li><a href="spring2022">Spring 2022</a> (Under Construction)</li>
-      <li><a href="summer2022">Summer 2022</a> (Under Construction)</li>
+      <li><a href="summer2022">Summer 2022</a></li>
       <li><a href="fall2022">Fall 2022</a></li>
     </ul>
   </p>
