--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <li><a href="spring2022">Spring 2022</a> (Under Construction)</li>
       <li><a href="summer2022">Summer 2022</a></li>
       <li><a href="fall2022">Fall 2022</a></li>
+      <li><a href="spring-2023">Spring 2023</a></li>
     </ul>
   </p>
 </body>
